feat: update tomls

--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "counter-solana-native"
+name = "counter_solana_native"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
+name = "counter_solana_native"
 
 [features]
 no-entrypoint = []
