--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,11 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: ['latest', 'beta', '1.18.0']
+        # version: ['latest', 'beta', '1.18.0']
+        version: ['1.18.0']
     steps:
       # - uses: actions/checkout@v4
       - name: Install Solana CLI
-        uses: nickfrosty/github-actions/install-solana@v1
+        uses: nickfrosty/github-actions/install-solana@v1.1.1
         with:
           version: ${{ matrix.version }}
       - name: Build Program
