--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,15 +6,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # version: ['latest', 'beta', '1.18.0']
-        version: ['1.18.0']
+    # strategy:
+      # matrix:
+      #   # version: ['latest', 'beta', '1.18.0']
+      #   version: ['1.18.0']
     steps:
       # - uses: actions/checkout@v4
       - name: Install Solana CLI
         uses: nickfrosty/github-actions/install-solana@v1.1.3
         with:
-          version: ${{ matrix.version }}
-      - name: Build Program
-        run: solana-test-validator --version
+          # version: ${{ matrix.version }}
+          version: 2.0.0
+      - name: Verify Solana
+        run: solana --version
+      # - name: Build Program
+      #   run: solana-test-validator --version
